# hashnode-todo-bot

./: config.py  main.py  pyproject.toml
bot/: create_models.py  keyboards.py  main.py  middlewares.py  models.py  test.py  texts.py
bot/dialogs/: __init__.py  add_note.py  base.py  list_notes.py
bot/services/: notes.py  users.py
